# ps-ds-takehome

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  ps_ds_takehome.ipynb  pyproject.toml
src/sample-python/: example.py
src/sample_python/: example.py
tests/sample_python/: example_test.py
