[tool.poetry]
name = "sample-python"
version = "0.0.1"
description = "Sample Python repository."
authors = ["First Last <name@example.com>"]
packages = [{include = "sample-python", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest-testdox = "^3.1.0"

[tool.poetry.dev-dependencies]
autoflake = "^2.2.1"
isort = "^5.13.2"
black = "^24.2.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
coverage = "^7.4.1"
pre-commit = "^3.6.1"

[tool.poetry.scripts]
sample-python = "sample-python.example:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
addopts = [
  "--basetemp=/tmp/pytest",
  "--testdox"
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | \.git
  | __pycache__
  | \.tox
  | \venv
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = [
  '*.parquet'
]
filter_files = true
skip_gitignore = true

[tool.mypy]
exclude = [
  '\.yaml$',
  '\.yml$',
  '\.toml$',
  '\.venv'
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src", "tests"]
omit = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
