[tool.poetry]
name = "ps-ds-takehome"
version = "0.0.1"
description = "Pluralsight Takehome Assessment Python repository."
authors = ["E J <name@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.2"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
autoflake = "^2.2.1"
isort = "^5.13.2"
black = "^24.2.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
coverage = "^7.4.1"
pre-commit = "^3.6.1"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | \.git
  | __pycache__
  | \.tox
  | \venv
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
filter_files = true
skip_gitignore = true

[tool.mypy]
exclude = [
  '\.yaml$',
  '\.yml$',
  '\.toml$',
  '\.venv'
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
